--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/blesh/rx-ducks-react-component#readme",
   "dependencies": {
-    "rx-ducks-middleware": "0.0.0-alpha.0"
+    "rx-ducks-middleware": "0.0.0-alpha.1"
   },
   "peerDependencies": {
     "react": "^15.0.1",
@@ -40,14 +40,17 @@
   "devDependencies": {
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.3",
+    "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.7.4",
     "babel-plugin-transform-function-bind": "^6.5.2",
+    "babel-plugin-transform-react-jsx": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
     "eslint": "^2.8.0",
     "mocha": "^2.4.5",
     "react": "^15.0.1",
     "redux": "^3.5.1",
+    "rx-ducks-middleware": "0.0.0-alpha.1",
     "rxjs": "^5.0.0-beta.6"
   }
 }
